--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ github_username:  munij-dev
 
 # Build settings
 markdown: kramdown
+permalink: pretty
 theme: minima
 plugins:
   - jekyll-feed
@@ -31,11 +32,12 @@ plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
+exclude:
+   - Gemfile
+   - Gemfile.lock
 #   - node_modules
 #   - vendor/bundle/
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+exclude: [vendor]
