--- a/_config.yml
+++ b/_config.yml
@@ -32,11 +32,11 @@ plugins:
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
-   - Gemfile
-   - Gemfile.lock
+  #  - Gemfile
+  #  - Gemfile.lock
 #   - node_modules
 #   - vendor/bundle/
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-exclude: [vendor]
+# exclude: [vendor]
