--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: munij
 email: muniainjuan@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
  My portfolio website.
-baseurl: "/munij-dev.github.io" # the subpath of your site, e.g. /blog
-url: "https://munij-dev.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: / # the subpath of your site, e.g. /blog
+url: http://munij-dev.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: munij_dev
 github_username:  munij-dev
 
