--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: / # the subpath of your site, e.g. /blog
 url: http://munij-dev.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: munij_dev
 github_username:  munij-dev
+linkedin_username: juan-muniain
 
 # Build settings
 markdown: kramdown
