--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: munij
+title: munji
 email: muniainjuan@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
  My portfolio website.
 baseurl: / # the subpath of your site, e.g. /blog
-url: http://munij-dev.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: munij_dev
-github_username:  munij-dev
+url: http://munjidev.github.io # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: munjidev
+github_username:  munjidev
 linkedin_username: juan-muniain
 
 # Build settings
