--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: munji
-email: muniainjuan@icloud.com
+email: muniainjuan@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  My portfolio website.
 baseurl: / # the subpath of your site, e.g. /blog
 url: http://munjidev.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: munjidev
 github_username:  munjidev
-linkedin_username: juan-muniain
 
 # Build settings
 markdown: kramdown
