--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: munji
-email: muniainjuan@gmail.com
+email: muniainjuan@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
  My portfolio website.
 baseurl: / # the subpath of your site, e.g. /blog
@@ -22,6 +22,7 @@ url: http://munjidev.github.io # the base hostname & protocol for your site, e.g
 twitter_username: munjidev
 github_username:  munjidev
 bluesky_username: munjidev
+linkedin_username: juan-muniain
 
 # Build settings
 markdown: kramdown
